<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="kg.korea.kfc.activity.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/cm_title_layout_height"
                android:paddingLeft="@dimen/cm_title_layout_left_right"
                android:paddingRight="@dimen/cm_title_layout_left_right">

                <Button
                    android:id="@+id/btn_left_menu_close"
                    android:layout_width="@dimen/icon_top_menu_close_width_height"
                    android:layout_height="@dimen/icon_top_menu_close_width_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_top_menu_close" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:minHeight="172dp">

                <ImageView
                    android:layout_width="@dimen/login_logo_width"
                    android:layout_height="@dimen/login_logo_height"
                    android:background="@drawable/logo_kfc_login" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_layout_left_right"
                android:layout_marginRight="@dimen/login_layout_left_right"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/login_id_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/login_input_layout_height"
                        android:layout_weight="1"
                        android:background="@drawable/input_default_320"
                        android:drawableRight="@drawable/icon_input_cancel"
                        android:gravity="left|center"
                        android:hint="@string/login_id_hint"
                        android:maxLength="15"
                        android:paddingLeft="@dimen/login_input_layout_left_right"
                        android:paddingRight="@dimen/login_input_layout_left_right"
                        android:singleLine="true"
                        android:text=""
                        android:textColorHint="@color/color_333333"
                        android:textSize="@dimen/login_a_text_size" />

                    <EditText
                        android:id="@+id/login_pw_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/login_input_layout_height"
                        android:layout_marginTop="@dimen/login_input_layout_top"
                        android:background="@drawable/input_default_320"
                        android:gravity="left|center"
                        android:hint="@string/login_pw_hint"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:paddingLeft="@dimen/login_input_layout_left_right"
                        android:paddingRight="@dimen/login_input_layout_left_right"
                        android:singleLine="true"
                        android:text=""
                        android:textColorHint="@color/color_888888"
                        android:textSize="@dimen/login_b_text_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_auto_layout_top"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/login_auto_check_box"
                            android:layout_width="@dimen/login_check_width_height"
                            android:layout_height="@dimen/login_check_width_height"
                            android:layout_marginRight="@dimen/login_auto_layout_left_right"
                            android:background="@drawable/chk_selected_19"
                            android:button="@null" />

                        <TextView
                            android:id="@+id/login_auto_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/login_auto_layout_left_right"
                            android:text="@string/login_auto"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/login_c_text_size" />

                        <CheckBox
                            android:id="@+id/login_id_save_check_box"
                            android:layout_width="@dimen/login_check_width_height"
                            android:layout_height="@dimen/login_check_width_height"
                            android:layout_marginRight="@dimen/login_auto_layout_left_right"
                            android:background="@drawable/chk_selected_19"
                            android:button="@null" />

                        <TextView
                            android:id="@+id/login_id_save_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="60dp"
                            android:text="@string/login_id_save"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/login_d_text_size" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/login_in_button_height"
                        android:layout_marginTop="@dimen/login_in_button_top"
                        android:background="@color/color_c70026"
                        android:text="@string/login"
                        android:textColor="@color/color_ffffff"
                        android:textSize="@dimen/login_e_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_layout_text_height"
                    android:layout_marginTop="@dimen/login_in_text_top"
                    android:gravity="top|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_id"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/login_f_text_size" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="10dp"
                        android:layout_marginLeft="@dimen/login_in_text_left_right"
                        android:layout_marginRight="@dimen/login_in_text_left_right"
                        android:background="@color/color_ebebeb" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_pw"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/login_f_text_size" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="10dp"
                        android:layout_marginLeft="@dimen/login_in_text_left_right"
                        android:layout_marginRight="@dimen/login_in_text_left_right"
                        android:background="@color/color_ebebeb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join"
                        android:textColor="@color/color_888888"
                        android:textSize="@dimen/login_f_text_size" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_ebebeb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_guide_2_height"
                android:layout_gravity="top|center"
                android:layout_marginTop="@dimen/login_guide_1_top"
                android:text="@string/login_guide_1"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/login_i_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_simple_height"
                android:layout_gravity="top|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login_naver"
                        android:layout_width="@dimen/login_naver_width"
                        android:layout_height="@dimen/login_naver_height"
                        android:background="@drawable/btn_login_naver" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/login_simpe_left_right"
                        android:layout_marginRight="@dimen/login_simpe_left_right"
                        android:background="@color/color_ebebeb" />

                    <Button
                        android:layout_width="@dimen/login_facebook_width"
                        android:layout_height="@dimen/login_facebook_height"
                        android:background="@drawable/btn_login_facebook" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>